objects/Interest__c.object
<CustomObject><fields>
        <fullName>ACF_Business_org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Organization interested in the Babson Program or Interest Topic</inlineHelpText>
        <label>Business Org</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Business Organization, Educational Institution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Program_Interests_Account</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact interested in the Babson Program or Interest Topic</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Program_Interests</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Inquiry_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Interest_Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Topic</label>
        <referenceTo>Interest_Topic__c</referenceTo>
        <relationshipName>Program_Interests</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Program_Interests</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Pivotal_ID__c</fullName>
        <description>Unique external ID used for data migration from Pivotal.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique external ID used for data migration from Pivotal.</inlineHelpText>
        <label>Pivotal ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>ACF_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>012360000007uz2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interests (Program)</relationshipLabel>
        <relationshipName>Program_Interests_Program</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_View__c</fullName>
        <formula>HYPERLINK("/"+Id, "View")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Tracks a lead/contact/account's interest sent from Open Enrollment's landing page(s), RFI, etc; interest in Babson programs and/or general areas of interest (Interest Groups)</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Interest</label><nameField>
        <displayFormat>Int-{0000000000}</displayFormat>
        <label>Interest_GroupID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Interests</pluralLabel><sharingModel>ReadWrite</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>All</fullName>
        <columns>ACF_View__c</columns>
        <columns>ACF_Program__c</columns>
        <columns>ACF_Interest_Topic__c</columns>
        <columns>ACF_Inquiry_Date__c</columns>
        <columns>ACF_Business_org__c</columns>
        <columns>ACF_Contact__c</columns>
        <columns>ACF_Lead__c</columns>
        <columns>ACF_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Area_Interests</fullName>
        <columns>ACF_View__c</columns>
        <columns>ACF_Interest_Topic__c</columns>
        <columns>ACF_Business_org__c</columns>
        <columns>ACF_Contact__c</columns>
        <columns>ACF_Inquiry_Date__c</columns>
        <columns>ACF_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACF_Interest_Topic__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Interests in Topics</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Program_Interests</fullName>
        <columns>ACF_View__c</columns>
        <columns>ACF_Program__c</columns>
        <columns>ACF_Contact__c</columns>
        <columns>ACF_Business_org__c</columns>
        <columns>ACF_Inquiry_Date__c</columns>
        <columns>ACF_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACF_Program__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Interests in Programs</label>
        <language>en_US</language>
    </listViews><validationRules>
        <fullName>Program_OR_Topic</fullName>
        <active>true</active>
        <description>Validates that either Program OR Interest Topichas a value</description>
        <errorConditionFormula>AND(
NOT(ISBLANK( ACF_Program__c )), NOT(ISBLANK( ACF_Interest_Topic__c ))
)</errorConditionFormula>
        <errorDisplayField>ACF_Program__c</errorDisplayField>
        <errorMessage>Choose either Program OR Area.
Create additional records for additional interest groups.</errorMessage>
    </validationRules></CustomObject>